--- a/html/jQuery/css/styles.css
+++ b/html/jQuery/css/styles.css
@@ -33,3 +33,99 @@ button{
 button:hover{
     cursor: pointer;
 }
+
+/*HIDING AND SHOWING JQUERY*/
+.hidden{
+    display: none;
+}
+
+#box1{
+    height: 100px;
+    width: 100px;
+    background: #fc3; 
+    color: white;
+    border: solid 4px #333;
+    margin: 0 auto; /*why without    this box goes to the left?*/
+}
+
+/*ANIMATE JQUERY*/
+#navArrows{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: 100px auto 0;
+    background: #333;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    padding: 20px;
+}
+
+.navigationArrow{
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background: white;
+    color: #222;
+}
+
+.navigationArrow:hover{
+    border: solid 3px #a7f;
+}
+
+#up{
+    left: 50%;
+    margin-left: -25px;
+}
+
+#left, #right{
+    top: 50%;
+    margin-top: -25px;
+}
+
+#right{
+    right: 20px;
+    left: inherit;
+}
+
+#down{
+    bottom: 20px;
+    top: inherit;
+    left: 50%;
+    margin-left: -25px;
+}
+
+.box{
+    height: 100px;
+    width: 100px;
+    background: #a7f;
+    color: white;
+    border: solid 4px #a1f;
+    line-height: 100px;
+    margin: 100px auto 0;
+    opacity: 0.5;
+    position: relative;
+}
+
+/*JQUERY CSS*/
+#circle1{
+    display: inline-block;
+    background: #8a8d22;
+    color: white;
+    text-align: center;
+    line-height: 140px;
+    height: 140px;
+    width: 140px;
+    margin: 40px;
+}
+
+.circleShape{
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+}
