fixed bugs and added new jQuery project

--- a/projects/TipCalculator/styles.css
+++ b/projects/TipCalculator/styles.css
@@ -1,47 +1,51 @@
-body{
-    background: #333 url('tip.webp') center center no-repeat;
+/* styles.css */
+
+body {
+    background: #333 url('img/cutlery.jpg') center center no-repeat;
     background-size: cover;
     color: #532827;
 }
 
-#container{
+#container {
     width: 400px;
-    margin: 4px auto 0;
+    margin: 40px auto 0;
     padding: 50px;
     box-sizing: border-box;
-    background: url("paper-pattern.webp") top left repeat;
+    background: url('img/paper-pattern.jpg') top left repeat;
     box-shadow: 0 10px 15px -8px #000;
-    border-radius: 5px;
     -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    text-align: center;
 }
 
-h1{
+h1 {
     margin: 0 0 20px;
     padding: 0 0 20px;
     border-bottom: solid 1px #ddd;
 }
 
-form{
+form {
     text-align: left;
 }
 
-form label{
+form label {
     display: block;
     margin: 25px 0;
     font-weight: bold;
 }
 
 form input,
-form select{
+form select {
     padding: 8px;
     margin: 10px 0;
 }
 
-form input[type="text"]{
+form input[type="text"] {
     width: 90px;
 }
 
-button{
+button {
     background: #6c2726;
     color: white;
     border: none;
@@ -52,17 +56,17 @@ button{
     width: 100%;
 }
 
-button:hover{
+button:hover {
     background: #4c2827;
     border-bottom-color: #111;
 }
 
-button:active{
+button:active {
     position: relative;
     top: 1px;
 }
 
-#totalTip{
+#totalTip {
     font-size: 50px;
     margin-top: 40px;
 }
@@ -75,13 +79,21 @@ button:active{
     text-transform: uppercase;
 }
 
-#totalTip sup{
+#totalTip sup {
     font-size: 24px;
     top: -18px;
 }
 
-#totalTip small{
+#totalTip small {
     font-size: 14px;
     font-weight: bold;
     display: block;
 }
+
+
+
+
+
+
+
+
