scrollspy using bootstrap 5

--- a/examples/bootstrap/css/styles.css
+++ b/examples/bootstrap/css/styles.css
@@ -12,3 +12,9 @@ body{
     background: pink;
     border: solid 1px #555;
 }
+
+#scrollerBox{
+    position: relative;
+    height: 400px;
+    overflow: auto;
+}
